Fixed page header overlaps in-page anchors

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -12,6 +12,15 @@ html {
   line-height: 1.6;
 }
 
+// Fixed page header overlaps in-page anchors
+// https://stackoverflow.com/a/28824157
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
+
 html,
 body {
   margin: 0;
